--- a/genomic_coverage_analysis.ipynb
+++ b/genomic_coverage_analysis.ipynb
@@ -618,7 +618,9 @@
    "id": "b305fb03-3e17-4f07-b4ba-7ec053b77f19",
    "metadata": {},
    "source": [
-    "KL divergence shows"
+    "KL divergence shows how different it is from empirical pmf\n",
+    "\n",
+    "The lower the better, poisson seems to do well but doesnt capture the long tails in the data"
    ]
   },
   {
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "id": "19a20819",
    "metadata": {
     "tags": []
@@ -655,7 +657,7 @@
        "0.5771665527494072"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,8 +686,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f15ff3a3-8ee5-4b50-8b32-96a04ec4d3cb",
+   "metadata": {},
+   "source": [
+    "High MSE, Linear regression not useful"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 87,
    "id": "500eceab",
    "metadata": {
     "tags": []
@@ -723,7 +733,7 @@
        "  <th>Date:</th>            <td>Fri, 03 Nov 2023</td> <th>  Deviance:          </th>  <td>  23708.</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>15:20:05</td>     <th>  Pearson chi2:      </th>  <td>9.22e+03</td>  \n",
+       "  <th>Time:</th>                <td>15:37:58</td>     <th>  Pearson chi2:      </th>  <td>9.22e+03</td>  \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Iterations:</th>         <td>100</td>       <th>  Pseudo R-squ. (CS):</th>   <td>0.05042</td>  \n",
@@ -754,7 +764,7 @@
        "\\textbf{Link Function:}   &       Log        & \\textbf{  Scale:             } &     1.0000   \\\\\n",
        "\\textbf{Method:}          &       IRLS       & \\textbf{  Log-Likelihood:    } & -7.9190e+05  \\\\\n",
        "\\textbf{Date:}            & Fri, 03 Nov 2023 & \\textbf{  Deviance:          } &     23708.   \\\\\n",
-       "\\textbf{Time:}            &     15:20:05     & \\textbf{  Pearson chi2:      } &   9.22e+03   \\\\\n",
+       "\\textbf{Time:}            &     15:37:58     & \\textbf{  Pearson chi2:      } &   9.22e+03   \\\\\n",
        "\\textbf{No. Iterations:}  &       100        & \\textbf{  Pseudo R-squ. (CS):} &   0.05042    \\\\\n",
        "\\textbf{Covariance Type:} &    nonrobust     & \\textbf{                     } &              \\\\\n",
        "\\bottomrule\n",
@@ -780,7 +790,7 @@
        "Link Function:                    Log   Scale:                          1.0000\n",
        "Method:                          IRLS   Log-Likelihood:            -7.9190e+05\n",
        "Date:                Fri, 03 Nov 2023   Deviance:                       23708.\n",
-       "Time:                        15:20:05   Pearson chi2:                 9.22e+03\n",
+       "Time:                        15:37:58   Pearson chi2:                 9.22e+03\n",
        "No. Iterations:                   100   Pseudo R-squ. (CS):            0.05042\n",
        "Covariance Type:            nonrobust                                         \n",
        "===================================================================================\n",
@@ -792,7 +802,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 82,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
