--- a/genomic_coverage_analysis.ipynb
+++ b/genomic_coverage_analysis.ipynb
@@ -545,7 +545,7 @@
     "\n",
     "print(\"Mean Coverage:\\n\",coverage_mean)\n",
     "#stdev\n",
-    "print(\"Std Ev:\\n\",np.sqrt(coverage_var))\n",
+    "print(\"Std Dev:\\n\",np.sqrt(coverage_var))\n",
     "print(\"Max Observed Coverage:\\n\",coverage_max)"
    ]
   },
